# hashtables

./: .gitignore  .travis.yml  LICENSE  cabal.haskell-ci  cabal.project  changelog.md  haddock.sh  hashtables.cabal
.github/workflows/: haskell-ci.yml  i386.yml  wasm.yml
benchmark/: LICENSE  hashtable-benchmark.cabal
benchmark/src/: Main.hs
benchmark/src/Criterion/Collection/: Chart.hs  Main.hs  Sample.hs  Types.hs
benchmark/src/Criterion/Collection/Internal/: Types.hs
benchmark/src/Data/Benchmarks/UnorderedCollections/: Distributions.hs  Types.hs
benchmark/src/Data/Vector/Algorithms/: Shuffle.hs
cbits/: Makefile  cfuncs.c  check.c  common.c  default.c  defs.h  sse-42-check.c  sse-42.c
src/Data/HashTable/: Class.hs  IO.hs
src/Data/HashTable/Internal/: Array.hs  CacheLine.hs  CheapPseudoRandomBitStream.hs  IntArray.hs  UnsafeTricks.hs  Utils.hs
src/Data/HashTable/Internal/Linear/: Bucket.hs
src/Data/HashTable/ST/: Basic.hs  Cuckoo.hs  Linear.hs
test/: hashtables-test.cabal  runTestsAndCoverage.sh  runTestsNoCoverage.sh
test/compute-overhead/: ComputeOverhead.hs
test/suite/: TestSuite.hs
test/suite/Data/HashTable/Test/: Common.hs
