Name:                hashtable-benchmark
Version:             0.2
Copyright:           (c) 2011-2012, Google, Inc.
Synopsis:            Benchmarks for hashtables
License:             BSD3
License-file:        LICENSE
Author:              Gregory Collins
Maintainer:          greg@gregorycollins.net
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.2

Flag chart
  Default:           False

Executable hashtable-benchmark
  main-is:           Main.hs
  hs-source-dirs:    src ../src

  build-depends:     base                 >= 4.4     && <5,
                     base16-bytestring    == 0.1.*,
                     bytestring           >= 0.10    && <0.11,
                     containers           >= 0.4     && <0.6,
                     criterion            >= 0.5     && <0.7,
                     csv                  == 0.1.*,
                     deepseq              >= 1.1     && <1.4,
                     filepath             == 1.*,
                     hashable             >= 1.1     && <2,
                     hashtables           >= 1.0.1.3 && <1.1,
                     mtl                  == 2.*,
                     mwc-random           >= 0.8     && <0.13,
                     primitive,
                     statistics           >= 0.8     && <0.11,
                     threads              >= 0.4     && <0.6,
                     unordered-containers >= 0.2     && <0.3,
                     vector               >= 0.7     && <0.11,
                     vector-algorithms    >= 0.5     && <0.6

  if flag(chart)
    Build-depends:   Chart             == 0.14.*,
                     colour            == 2.3.*,
                     data-accessor     == 0.2.*
    Cpp-options:     -DCHART

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind -rtsopts
               -with-rtsopts=-H2G -with-rtsopts=-A4M
